# pintrail

./: .gitignore  README.md  idea-dump.excalidraw
backend/: README.md  main.py  requirements.txt
backend/ops/: Makefile  docker-compose.yml
backend/services/user/: Dockerfile  pyproject.toml
backend/services/user/app/: deps.py  main.py  models.py  user_controller.py  user_db.py  user_module.py  user_orm.py
backend/services/user/app/dto/: user_schema.py  users.py
mobile/: README.md  api.ts  app.json  cesconfig.jsonc  constants.ts  package-lock.json  package.json  tailwind.config.js
mobile/app/: [id].tsx  _layout.tsx  detail.tsx  index.tsx  playground.tsx  qr.tsx  search.tsx  tours.tsx
mobile/components/: Button.tsx
mobile/data/: mockData.ts
mobile/types/: types.ts
pintrail/: ARCH.md  README.md  compose.prod.yml  compose.yml  package-lock.json  package.json  test.js  tryit.js  tsconfig.json
pintrail/artifact/: Dockerfile  pyproject.toml
pintrail/artifact/app/: config.py  database.py  dependencies.py  main.py
pintrail/artifact/app/routers/: artifacts.py  images.py
pintrail/artifact/app/schemas/: artifact.py  image.py
pintrail/deploy/: Caddyfile  DEPLOY.md  README.md  pintrail.service
pintrail/docs/: ARTIFACTS.md
pintrail/domain/: artifact.js
pintrail/holmes/: .bashrc_extras  Dockerfile  (+1 more)
pintrail/portal/: .env.example  Dockerfile  PORTAL.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker.py
pintrail/portal/app/: config.py  database.py  dependencies.py  main.py
pintrail/portal/app/models/: __init__.py  artifact.py  notify.py  user.py
pintrail/portal/app/routers/: artifacts.py  auth.py  frontend.py  media.py  notify.py
pintrail/portal/app/schemas/: artifact.py
pintrail/portal/app/services/: auth.py  email.py
pintrail/portal/app/static/: home.html  styles.css
pintrail/portal/app/templates/: base.html  index.html  login.html
pintrail/portal/app/templates/partials/: admin_panel.html  artifact_detail.html  artifact_tree.html  image_gallery.html  user_list.html
pintrail/portal/scripts/: create-user.js
pintrail/portal/src/: app.module.ts  main.ts
pintrail/portal/src/artifacts/: artifact-image.entity.ts  artifact.entity.ts  artifact.types.ts  artifacts.controller.ts  artifacts.module.ts  artifacts.service.ts
pintrail/portal/src/artifacts/dto/: create-artifact.dto.ts  update-artifact.dto.ts
pintrail/portal/src/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  auth.types.ts  current-user.decorator.ts  roles.decorator.ts  user-session.entity.ts  user.entity.ts
pintrail/portal/src/auth/dto/: create-user.dto.ts  update-user.dto.ts
pintrail/portal/src/frontend/: app.js  frontend.controller.ts  index.html  styles.css
pintrail/portal/src/media/: media.controller.ts
pintrail/portal/src/types/: express.d.ts
pintrail/worker/: .env.example  Dockerfile  WORKER.md  config.py  index.js  main.py  models.py  package-lock.json  package.json  pyproject.toml
website/: index.html  main.css
(+51 files in other folders)
