[project]
name = "wk2"
version = "0.1.0"
description = "Pintrail image-processing worker"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.0",
    "pillow>=11.0.0",
    "arq>=0.26.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
